# kiley

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: bialignment.rs  dptable.rs  fasta.rs  gen_seq.rs  hmm.rs  lib.rs  main.rs  op.rs  padseq.rs  polishing.rs  realigner.rs  sam.rs
src/alignment/: banded.rs  bialignment.rs  mod.rs  naive.rs
src/bialignment/: banded.rs  guided.rs  mod.rs
src/gphmm/: banded.rs  mod.rs
src/hmm/: banded.rs  full.rs  generalized_pair_hidden_markov_model.rs  guided.rs  guided_antidiagonal.rs  mod.rs
src/hmm/guided/: mod.rs
src/trialignment/: banded.rs  mod.rs  naive.rs
static/: benchmark_parameters.toml
