[package]
name = "kiley"
version = "0.1.0"
authors = ["ban-m <ban-m@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
rand = "*"
rand_xoshiro = "*"
log = "0.4.14"
bytecount = "*"
env_logger = "*"
rayon = "*"
edlib_sys = {git = "https://github.com/ban-m/edlib-sys.git", branch = "master"}

[dev-dependencies]
rayon = "*"
